src/app/admin/products/products/product-form/product-form.component.css
.container {
  display: flex;
  justify-content: center;
  width: 100%;
  flex-direction: row;
}

form {
  height: 100%;
  justify-content: center;
}

.item {
  margin: 1rem;
}

.container-row {
  display: flex;
  gap: 6rem;
}

.item-row {
  width: 12rem;
  display: inline;
}

mat-label {
  display: block;
  font-size: 18px;
  margin-bottom: 0.2rem;
  margin-top: 0.65rem;
}

.align-center {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

mat-form-field {
  width: 30rem;
}

textarea {
  height: 12rem;
  resize: none;
}

.buttons {
  float: right;
}

.buttons button {
  margin: 20px;
  padding: 10px 30px;
  font-size: 16px;
}

/*input[type="file"] {*/
/*  position: absolute;*/
/*  width: 1px;*/
/*  height: 1px;*/
/*  padding: 0;*/
/*  margin: -1px;*/
/*  overflow: hidden;*/
/*  clip: rect(0,0,0,0);*/
/*  border: 0;*/
/*}*/

#display_image {
  background-color: rgba(0, 0, 0, .04);
  width: 30rem;
  height: 30rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.form-group-image {
  display: flex;
}

.center {
  justify-content: center;
  vertical-align: center;
}

/* TODO - Apply hover effect */
.add-image {
  transform: translate(-50%, -50%);
  cursor: pointer;
}

.line {
  width: 30px;
  height: 2px;
  background-color: #B3B3B3;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.line:nth-child(2) {
  transform: translate(-50%, -50%) rotate(90deg);
}

mat-error {
  margin-left: -0.57rem;
}

